; ModuleID = '/home/carl/AnghaBench/linux/fs/xfs/extr_xfs_health.c_xfs_rt_mark_healthy.c'
source_filename = "/home/carl/AnghaBench/linux/fs/xfs/extr_xfs_health.c_xfs_rt_mark_healthy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xfs_mount = type { i32, i32, i32 }

@XFS_SICK_RT_PRIMARY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @xfs_rt_mark_healthy(%struct.xfs_mount* %0, i32 %1) #0 {
  %3 = alloca %struct.xfs_mount*, align 8
  %4 = alloca i32, align 4
  store %struct.xfs_mount* %0, %struct.xfs_mount** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* @XFS_SICK_RT_PRIMARY, align 4
  %7 = xor i32 %6, -1
  %8 = and i32 %5, %7
  %9 = icmp ne i32 %8, 0
  %10 = xor i1 %9, true
  %11 = zext i1 %10 to i32
  %12 = call i32 @ASSERT(i32 %11)
  %13 = load %struct.xfs_mount*, %struct.xfs_mount** %3, align 8
  %14 = load i32, i32* %4, align 4
  %15 = call i32 @trace_xfs_rt_mark_healthy(%struct.xfs_mount* %13, i32 %14)
  %16 = load %struct.xfs_mount*, %struct.xfs_mount** %3, align 8
  %17 = getelementptr inbounds %struct.xfs_mount, %struct.xfs_mount* %16, i32 0, i32 2
  %18 = call i32 @spin_lock(i32* %17)
  %19 = load i32, i32* %4, align 4
  %20 = xor i32 %19, -1
  %21 = load %struct.xfs_mount*, %struct.xfs_mount** %3, align 8
  %22 = getelementptr inbounds %struct.xfs_mount, %struct.xfs_mount* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = and i32 %23, %20
  store i32 %24, i32* %22, align 4
  %25 = load i32, i32* %4, align 4
  %26 = load %struct.xfs_mount*, %struct.xfs_mount** %3, align 8
  %27 = getelementptr inbounds %struct.xfs_mount, %struct.xfs_mount* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 4
  %29 = or i32 %28, %25
  store i32 %29, i32* %27, align 4
  %30 = load %struct.xfs_mount*, %struct.xfs_mount** %3, align 8
  %31 = getelementptr inbounds %struct.xfs_mount, %struct.xfs_mount* %30, i32 0, i32 2
  %32 = call i32 @spin_unlock(i32* %31)
  ret void
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @trace_xfs_rt_mark_healthy(%struct.xfs_mount*, i32) #1

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
